# cpp_volume_rendering

./: .gitignore  AddingNewVolumeRenderer.md  CMakeLists.txt  CMakeSettings.json  Evaluation.md  LICENSE  README.md
cppvolrend/: CMakeLists.txt  app_freeglut.cpp  app_freeglut.h  app_glfw.cpp  app_glfw.h  defines.h  main.cpp  renderingmanager.cpp  renderingmanager.h  volrenderbase.cpp  volrenderbase.h  volrendernull.cpp  volrendernull.h
cppvolrend/structured/_common_shaders/: obj_ray_marching.comp  ray_bbox_intersection.comp
cppvolrend/structured/rc1pass/: ray_marching_1p.comp  rc1prenderer.cpp  rc1prenderer.h
cppvolrend/structured/rc1pcrtgt/: crtgtrenderer.cpp  crtgtrenderer.h  gt_ray_marching.comp  vol_intersection.comp
cppvolrend/structured/rc1pdosct/: conegaussiansampler.cpp  conegaussiansampler.h  dosrcrenderer.cpp  dosrcrenderer.h  extcoefvolumegenerator.cpp  extcoefvolumegenerator.h  lightcachecomputation.comp  ray_bbox_marching.comp
cppvolrend/structured/rc1pdosct/glslextgen/: backtotau.comp  gen_extcoefvol_anysize.comp  gen_extcoefvol_samesize.comp  gen_extcoefvol_samesize_mmlevel.comp
cppvolrend/structured/rc1pextbsd/: ebs_ray_bbox_marching.comp  ebsrenderer.cpp  ebsrenderer.h  lightcachecomputation.comp
cppvolrend/structured/rc1pisoadapt/: ray_marching_1p_iso_adapt.comp  rc1pisoadaptrenderer.cpp  rc1pisoadaptrenderer.h
cppvolrend/structured/rc1pisoadapt/evaluation/: EvalSSIM_aneurism.csv  EvalSSIM_bonsai.csv  EvalSSIM_synthetic.csv  SSIM.py  vis.py
cppvolrend/structured/rc1pvctsg/: lightcachecomputation.comp  preprocessingstages.cpp  preprocessingstages.h  vct_ray_bbox_marching.comp  vctrenderer.cpp  vctrenderer.h
cppvolrend/structured/rc1pvctsg/glslpregen/: imgspace_renderpass.frag  preintegrationtable.comp  supervoxel_base.comp
cppvolrend/structured/sbtmdos/: blend.frag  blend.vert  evaluationslice.frag  evaluationslice.vert  layeredframebufferobject.cpp  layeredframebufferobject.h  sbtmdosrenderer.cpp  sbtmdosrenderer.h
cppvolrend/utils/: parameterspace.cpp  parameterspace.h  preillumination.cpp  preillumination.h
data/: #list_camera_states  #list_light_sources  #list_structured_datasets  #list_transfer_functions  volume_list.csv
data/tf1dcp/: bonsai_01.tf1d
include/im/: im.h  im_binfile.h  im_capture.h  im_color.h  im_colorhsi.h  im_convert.h  im_counter.h  im_dib.h  im_image.h  im_lib.h  im_math.h  im_math_op.h  im_palette.h  im_plus.h  im_process_ana.h  im_process_glo.h  im_process_loc.h  im_process_pnt.h  im_util.h
lib/glfw/debug/: glfw3.lib
lib/glfw/release/: glfw3.lib
lib/im_3_12/: im.lib  im_avi.lib  im_capture.lib  im_fftw.lib  im_jp2.lib  im_lzo.lib  im_process.lib  im_process_omp.lib  im_wmv.lib  zlib1.lib
libs/: CMakeLists.txt
libs/file_utils/: CMakeLists.txt  pvm.cpp  pvm.h  pvm_old.cpp  pvm_old.h  rawloader.cpp  rawloader.h  v^3_pvm_README.txt
libs/gl_utils/: CMakeLists.txt  arrayobject.cpp  arrayobject.h  bufferobject.cpp  bufferobject.h  camera.cpp  camera.h  computeshader.cpp  computeshader.h  framebufferobject.cpp  framebufferobject.h  pipelineshader.cpp  pipelineshader.h  shader.cpp  shader.h  sphere.h  stackmatrix.cpp  stackmatrix.h  texture1d.cpp  texture1d.h  texture2d.cpp  texture2d.h  texture3d.cpp  texture3d.h  timer.cpp  timer.h  utils.cpp  utils.h
libs/gl_utils/shapes/: cube.cpp  cube.h  grid.cpp  grid.h
libs/math_utils/: CMakeLists.txt  convexhull.cpp  convexhull.h  geometry.cpp  geometry.h  gfilter.cpp  gfilter.h  matrix.h  matrix4.h  utils.cpp  utils.h
libs/vis_utils/: CMakeLists.txt  camera.cpp  camera.h  colorutils.cpp  colorutils.h  defines.cpp  defines.h  renderoutputframe.cpp  renderoutputframe.h  summedareatable.cpp  summedareatable.h
libs/vis_utils/filters/: box.hpp  box_rgba.hpp  bspline3.hpp  bspline3_rgba.hpp  catmullrom.hpp  catmullrom_rgba.hpp  hat.hpp  hat_rgba.hpp  kernelbase.hpp  mitchellnetravali.hpp  mitchellnetravali_rgba.hpp  omoms3.hpp  omoms3_rgba.hpp  utils.hpp
libs/vis_utils/shader/: blendframe_render.frag  blendframe_render.vert
libs/vis_utils/shader/renderoutputframe/: box_filter.comp  cardinalbspline_filter.comp  cardinalomoms_filter.comp  catmullrom_filter.comp  cbs_digital_filter.comp  comoms_digital_filter.comp  downscaling_filter.comp  hat_filter.comp  mitchellnetravali_filter.comp  multisample_filter.comp  upscaling_filter.comp
libs/volvis_utils/: CMakeLists.txt  camerastatelist.cpp  camerastatelist.h  datamanager.cpp  datamanager.h  dataprovider.cpp  dataprovider.h  generalizedsampling.cpp  generalizedsampling.h  gridvolume.cpp  gridvolume.h  imagefilter.cpp  imagefilter.h  lightsourcelist.cpp  lightsourcelist.h  reader.cpp  reader.h  renderingparameters.cpp  renderingparameters.h  structuredgridvolume.cpp  structuredgridvolume.h  tetrahedron.cpp  tetrahedron.h  transferfunction.cpp  transferfunction.h  transferfunction1d.cpp  transferfunction1d.h  unstructuredgridvolume.cpp  unstructuredgridvolume.h  utils.cpp  utils.h
libs/volvis_utils/shader/_gradient_shading/: sobelfeldman_generator.comp
